app.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-app
  labels:
    app: redis-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redis-app
  template:
    metadata:
      labels:
        app: redis-app
    spec:
      containers:
      - name: app
        image: vanhtuan/redis-app
        ports:
        - containerPort: 3000
