app.pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis-app-pod
  labels:
    app: redis-app
spec:
  containers:
    - name: app
      image: vanhtuan/redis-app
      ports:
      - containerPort: 3000
