app.service.yml
kind: Service
apiVersion: v1
metadata:
  name: redis-app
spec:
  type: LoadBalancer
  selector:
    app: redis-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
